chore: refactor and complete TODO for ZoneDetectionJobControllerIT